[package]
name = "stewart"
version = "0.1.0"
authors = ["Richard Bradfield <richard.bradfield@fstab.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full"] }

[dependencies.serenity]
version = "0.9.1"
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework",
]
