[package]
name = "stewart"
version = "0.2.0"
authors = ["Richard Bradfield <bradfier@fstab.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures = "0.3"
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
prometheus = "0.10"
lazy_static = "1.1.0"
serde = "1"
serde_derive = "1"
envy = "0.4"
humantime = "2"
thiserror = "1"

[dependencies.serenity]
version = "0.9.1"
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "framework",
    "standard_framework",
]
